<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="15dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/created_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/header_1"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/header_2"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="193dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="194dp"
        android:background="@drawable/convert_icon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/logo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/unit1_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Miles per hour"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/unit2_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Kilometer per hour"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/conversion_drop_down_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/convert_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/montserrat_bold"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/convert_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/result_converted_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/montserrat_bold"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/convert_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="197dp"
        android:layout_height="67dp"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="68dp"
        android:text="@string/convert_btn"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/conversion_drop_down_btn"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:background="@drawable/frame"/>

    <Spinner
        android:id="@+id/conversion_drop_down_btn2"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/frame"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input1"
        android:background="@drawable/frame"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:autofillHints="Enter the value"
        android:gravity="center"
        android:hint="@string/text_input_desc"
        android:fontFamily="@font/montserrat_bold"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>